# internal/config/router.go
@@ -2,6 +2,7 @@ package config
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/inienam06/go-boilerplate/internal/modules/authentication"
 	"github.com/inienam06/go-boilerplate/internal/modules/user"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -14,7 +15,15 @@ func RegisterRoutes(r *gin.Engine, db *gorm.DB) {
 	userService := user.InitUserService(userRepo)
 	userController := user.InitUserController(userService)
 
+	authService := authentication.InitAuthenticationService(userRepo)
+	authController := authentication.InitAuthenticationController(authService)
+
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	auth := r.Group("/auth")
+	{
+		auth.POST("/login", authController.Login)
+	}
 
 	users := r.Group("/users")
 	{
