# internal/modules/authentication/authentication_dto.go
@@ -1,0 +1,6 @@
+package authentication
+
+type AuthLoginDTO struct {
+	Email    string `json:"email" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
